added PUT and POST handlers for donations, added formatters for donation and accounts. Updated swagger to reflect defaults in formatters.
